Adicionando tarefa 33, redefinição de senha, mais ajustes na questão do UTF de caracteres (#14)